--- a/App/requirements.txt
+++ b/App/requirements.txt
@@ -1,13 +1,8 @@
-streamlit
-requests
-StringIO
-pandas
-train_test_split
-LinearRegression
-mean_squared_error
-numpy
-pdb
-poisson
-joblib
-warnings
-scikit-learn
+streamlit==1.28.0
+pandas==2.0.3
+scikit-learn==1.3.0
+gdown==4.7.1
+joblib==1.3.2
+requests==2.31.0
+numpy==1.24.3
+scipy==1.10.1
