--- a/App/requirements.txt
+++ b/App/requirements.txt
@@ -1,8 +1,11 @@
-streamlit==1.28.0
-pandas==2.0.3
-scikit-learn==1.3.0
-gdown==4.7.1
-joblib==1.3.2
-requests==2.31.0
-numpy==1.24.3
-scipy==1.10.1
+streamlit
+requests
+StringIO
+os
+pandas
+sklearn
+numpy
+import pdb
+poisson
+joblib
+warnings
