--- a/.github/workflows/update_predictions.yml
+++ b/.github/workflows/update_predictions.yml
@@ -1,33 +1,40 @@
-# .github/workflows/update_predictions.yml
 name: Update Predictions
 
 on:
   schedule:
     - cron: '0 12 * * *'  # Executa todo dia ao meio-dia UTC
-  workflow_dispatch:  # Permite execução manual
+  workflow_dispatch:
 
 jobs:
   update:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
-        python-version: '3.8'
+        python-version: '3.10'
     
     - name: Install dependencies
+      working-directory: ./App  # Muda o diretório de trabalho
       run: |
         pip install -r requirements.txt
+        pip install pandas numpy scipy scikit-learn gitpython gdown requests
         
     - name: Run update script
+      working-directory: ./App  # Executa na pasta App
       run: python update_predictions.py
       
     - name: Commit and push changes
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
         git add data/latest_predictions.csv
-        git commit -m "Automated predictions update"
-        git push
+        git commit -m "Automated predictions update [skip ci]"
+        git push origin main
