--- a/.github/workflows/update_predictions.yml
+++ b/.github/workflows/update_predictions.yml
@@ -2,39 +2,39 @@ name: Update Predictions
 
 on:
   schedule:
-    - cron: '0 12 * * *'  # Executa todo dia ao meio-dia UTC
+    - cron: '0 12 * * *' # Executa todos os dias ao meio-dia (UTC)
   workflow_dispatch:
 
 jobs:
   update:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    
+
     steps:
-    - uses: actions/checkout@v3
-    
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
-    
-    - name: Install dependencies
-      working-directory: ./App  # Muda o diretório de trabalho
-      run: |
-        pip install -r requirements.txt
-        pip install pandas numpy scipy scikit-learn gitpython gdown requests
-        
-    - name: Run update script
-      working-directory: ./App  # Executa na pasta App
-      run: python update_predictions.py
-      
-    - name: Commit and push changes
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: |
-        git config --global user.name "GitHub Actions"
-        git config --global user.email "actions@github.com"
-        git add data/latest_predictions.csv
-        git commit -m "Automated predictions update [skip ci]"
-        git push origin main
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run update script
+        run: python App/update_predictions.py
+
+      - name: Commit and push changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add data/latest_predictions.csv
+          if ! git diff --cached --quiet; then
+            git commit -m "Automated predictions update"
+            git push
+          else
+            echo "No changes to commit"
