--- a/.github/workflows/update_predictions.yml
+++ b/.github/workflows/update_predictions.yml
@@ -1,45 +1,35 @@
-name: update predictions
+name: Update Predictions
 
 on:
   schedule:
-    - cron: '0 12 * * *' # Executa todos os dias ao meio-dia (UTC)
+    - cron: '0 12 * * *'
   workflow_dispatch:
 
 jobs:
   update:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
+      - uses: actions/checkout@v2
+      
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v2
         with:
-          python-version: '3.10'
-
+          python-version: '3.8'
+          
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r App/requirements.txt
-
-      - name: Run update script
+          pip install pandas requests
+          
+      - name: Run prediction update
         run: python App/update_predictions.py
-
-      - name: Commit and push changes
+        
+      - name: Commit and push if changes
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          if [ -f App/data/latest_predictions.csv ]; then
-            git add App/data/latest_predictions.csv
-            if ! git diff --cached --quiet; then
-              git commit -m "Automated predictions update [skip ci]"
-              git push
-            else
-              echo "No changes to commit"
-            fi
-          else
-            echo "File App/data/latest_predictions.csv does not exist. Skipping commit."
-          fi
+          git add Data/predictions.csv
+          git diff --quiet && git diff --staged --quiet || git commit -m "Update predictions"
+          git push
