--- a/.github/workflows/update_predictions.yml
+++ b/.github/workflows/update_predictions.yml
@@ -30,6 +30,6 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git add Data/predictions.csv
+          git add data/predictions.csv
           git diff --quiet && git diff --staged --quiet || git commit -m "Update predictions"
           git push
