--- a/.github/workflows/update_predictions.yml
+++ b/.github/workflows/update_predictions.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pandas requests gdown
-          
+          pip install -r App/requerimentos.txt
       - name: Run prediction update
         run: python App/update_predictions.py
         
