Atualizar o update_predictions.yml

--- a/.github/workflows/update_predictions.yml
+++ b/.github/workflows/update_predictions.yml
@@ -5,6 +5,9 @@ on:
     - cron: '0 12 * * *' # Executa todos os dias ao meio-dia (UTC)
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   update:
     runs-on: ubuntu-latest
@@ -25,6 +28,9 @@ jobs:
 
       - name: Run update script
         run: python App/update_predictions.py
+
+      - name: Verificar alterações
+        run: git status
 
       - name: Commit and push changes
         env:
