--- a/.github/workflows/update_predictions.yml
+++ b/.github/workflows/update_predictions.yml
@@ -1,4 +1,4 @@
-name: update predictions
+name: Update Predictions
 
 on:
   schedule:
@@ -8,6 +8,8 @@ on:
 jobs:
   update:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
       - name: Checkout repository
@@ -19,21 +21,24 @@ jobs:
           python-version: '3.10'
 
       - name: Install dependencies
+        working-directory: ./App
         run: |
-          python -m pip install --upgrade pip
-          pip install -r App/requirements.txt
+          pip install -r requirements.txt
+          pip install pandas numpy scipy scikit-learn gitpython gdown requests
 
       - name: Run update script
-        run: python App/update_predictions.py
+        working-directory: ./App
+        run: python update_predictions.py
 
       - name: Commit and push changes
+        working-directory: ./App
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          if [ -f App/data/latest_predictions.csv ]; then
-            git add App/data/latest_predictions.csv
+          if [ -f data/latest_predictions.csv ]; then
+            git add data/latest_predictions.csv
             if ! git diff --cached --quiet; then
               git commit -m "Automated predictions update [skip ci]"
               git push
@@ -41,5 +46,4 @@ jobs:
               echo "No changes to commit"
             fi
           else
-            echo "File App/data/latest_predictions.csv does not exist. Skipping commit."
-          fi
+            echo "File data/latest_predictions.csv does not exist. Skipping commit."
