--- a/.github/workflows/update_predictions.yml
+++ b/.github/workflows/update_predictions.yml
@@ -1,4 +1,4 @@
-name: Update Predictions
+name: update predictions
 
 on:
   schedule:
@@ -8,8 +8,6 @@ on:
 jobs:
   update:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
 
     steps:
       - name: Checkout repository
@@ -21,29 +19,26 @@ jobs:
           python-version: '3.10'
 
       - name: Install dependencies
-        working-directory: ./App
         run: |
-          pip install -r requirements.txt
-          pip install pandas numpy scipy scikit-learn gitpython gdown requests
+          python -m pip install --upgrade pip
+          pip install -r App/requirements.txt
 
       - name: Run update script
-        working-directory: ./App
-        run: python update_predictions.py
+        run: python App/update_predictions.py
 
       - name: Commit and push changes
-        working-directory: ./App
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          if [ -f data/latest_predictions.csv ]; then
-            git add data/latest_predictions.csv
-            if ! git diff --cached --quiet; then
+          if [ -f App/data/latest_predictions.csv ]; then
+            if ! git diff --quiet App/data/latest_predictions.csv; then
+              git add App/data/latest_predictions.csv
               git commit -m "Automated predictions update [skip ci]"
               git push
             else
               echo "No changes to commit"
             fi
           else
-            echo "File data/latest_predictions.csv does not exist. Skipping commit."
+            echo "File App/data/latest_predictions.csv does not exist. Skipping commit."
