--- a/.github/workflows/update_predictions.yml
+++ b/.github/workflows/update_predictions.yml
@@ -2,14 +2,14 @@ name: Update Predictions
 
 on:
   schedule:
-    - cron: '0 12 * * *' # Executa todos os dias ao meio-dia (UTC)
+    - cron: '0 12 * * *'  # Executa todos os dias ao meio-dia (UTC)
   workflow_dispatch:
 
 jobs:
   update:
     runs-on: ubuntu-latest
     permissions:
-      contents: write
+      contents: write  # Necessário para permitir push de commits
 
     steps:
       - name: Checkout repository
@@ -21,26 +21,15 @@ jobs:
           python-version: '3.10'
 
       - name: Install dependencies
-        working-directory: ./App
         run: |
-          pip install -r requirements.txt
-          pip install pandas numpy scipy scikit-learn gitpython gdown requests
+          python -m pip install --upgrade pip
+          pip install -r App/requirements.txt
 
       - name: Run update script
-        working-directory: ./App
-        run: python update_predictions.py
+        run: python App/update_predictions.py
 
       - name: Commit and push changes
-        run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          if [ -f App/data/latest_predictions.csv ]; then
-            git add App/data/latest_predictions.csv
-            if git diff --cached --quiet; then
-              echo "No changes to commit"
-            else
-              git commit -m "Automated predictions update [skip ci]"
-              git push
-            fi
-          else
-            echo "File App/data/latest_predictions.csv does not exist. Skipping commit."
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: 'Automated predictions update [skip ci]'
+          file_pattern: 'App/data/latest_predictions.csv'
