Atualizar o update_predictions.yml

--- a/.github/workflows/update_predictions.yml
+++ b/.github/workflows/update_predictions.yml
@@ -32,4 +32,4 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: 'Automated predictions update [skip ci]'
-          file_pattern: 'App/data/latest_predictions.csv'
+          file_pattern: 'data/latest_predictions.csv'
